# parma

./: .bumpversion.toml  .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml
.github/workflows/: package.yml
src/: fluxmeter.rs  geometry.rs  lib.rs  numpy.rs  parma.rs  particles.rs
src/PARMA/: LICENSE  subroutines.cpp
src/python/parma/: __init__.py  data
tests/: test_fluxmeter.py
