[package]
name = "parma"
version = "0.1.0"
edition = "2024"
license = "LGPL-3.0-only"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
chrono = "*"
paste = "*"
process_path = "*"
pyo3 = { version = "0.25", features = ["abi3", "chrono", "extension-module"] }

[build-dependencies]
cc = "*"
