[project]
name = "parma"
authors = [
    { name="Valentin Niess", email="valentin.niess@gmail.com" },
]
description = "PHITS-based Analytical Radiation Model in the Atmosphere (PARMA) as a Python package"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "numpy >= 1.6.0",
]
classifiers = [
    "Development Status :: 3 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics"
]
license = { text = "LGPL-3.0-or-later" }

[project.urls]
homepage = "https://github.com/niess/parma"
source = "https://github.com/niess/parma"
issues = "https://github.com/niess/parma/issues"

[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/python"]

[[tool.setuptools-rust.ext-modules]]
target = "parma._core"

# Build options for wheels.
[tool.cibuildwheel.linux]
before-all = """
curl -sSf https://sh.rustup.rs -o rustup.sh && \
sh rustup.sh -y
"""
repair-wheel-command = """
auditwheel repair -w {dest_dir} {wheel}\
"""
build = "cp38-manylinux_*"
environment = "PATH=$HOME/.cargo/bin:$PATH"
manylinux-x86_64-image = "manylinux2014"

[tool.cibuildwheel.macos]
build = "cp38-macosx_*"
environment = { MACOSX_DEPLOYMENT_TARGET = "10.12", RUSTFLAGS = "-C link-args=-Wl,-headerpad_max_install_names" }

[tool.cibuildwheel.windows]
build = [ "cp39-win_amd64", "cp39-win_arm64" ]

before-all = "python3 -m pip install delvewheel"
repair-wheel-command = 'delvewheel repair --add-path "%CD%" -w {dest_dir} -v {wheel}'
